fixed z-index, bandage loading error

--- a/src/app/styles/editor/page.module.css
+++ b/src/app/styles/editor/page.module.css
@@ -17,7 +17,7 @@
     border-radius: 10px;
     border: 1px var(--main-element-color) solid;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     width: 400px;
     height: 500px;
     overflow: hidden;
@@ -95,7 +95,7 @@
     position: relative;
     top: -10px;
     border: 1px var(--main-element-color) solid;
-    z-index: 0;
+    z-index: 1;
     padding-top: calc(1rem + 10px);
     display: flex;
     flex-direction: column;
